--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,8 +5,8 @@ const today = new Date();
 <footer class="footer footer-center block pb-7 pt-7">
   <div class="inline opacity-50">
     <!-- Thanks for using Astropod. Please keep this line to support the project :) -->
-    <a href="https://github.com/manuelernestog/astropod" target="_blank">
-      Powered by <span class="font-bold"> Astropod ⚡️</span>
+    <a href="https://riahealth.com/" target="_blank">
+     Brought to you by <span class="font-bold"> Ria Health </span>
     </a>
   </div>
 </footer>
