--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -19,6 +19,7 @@ let cover_url = cover ? cover : astropodConfig.cover;
         class="absolute top-0 left-0 items-center justify-center w-full h-full bg-gradient-to-t from-gray-900 to-50% to-transparent"
       >
         <div class="flex flex-col absolute bottom-0 left-32 md:left-52 px-3">
+        <p class="mb-1 text-xs font-medium text-white">{subtitle}</p>
           <h1 class="mb-3 text-lg md:text-4xl font-black text-white">{title}</h1>
         </div>
       </div>
@@ -39,6 +40,7 @@ let cover_url = cover ? cover : astropodConfig.cover;
 
   <div class="flex md:-mt-12 px-4 md:pl-52">
     <a href="/" class="btn btn-ghost m-1 justify-self-start px-2 sm:px-4"> Home</a>
+    <a href="/about" class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4"> About</a>
     <a href="/about" class="btn btn-ghost m-1 justify-self-end px-2 sm:px-4"> About</a>
 
     <div class="grow"></div>
