--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,5 @@
 ---
-import BaseHead from "../components/BaseHead.astro";
+import HeaderCard from "../components/headerCard/HeaderCard.astro";
 import Footer from "../components/Footer.astro";
 import astropodConfig from "../../.astropod/astropod.config.json";
 
@@ -11,7 +11,7 @@ const { image, title = astropodConfig.name, description = astropodConfig.descrip
 <!DOCTYPE html>
 <html lang="en" data-theme={astropodConfig.theme}>
   <head>
-    <BaseHead title={title} description={description} image={image} />
+    <HeaderCard title={title} description={description} image={image} />
   </head>
   <body class="bg-base-200 min-h-screen">
     <div class="container mx-auto lg:max-w-[960px]">
