--- a/src/layouts/EpisodeLayout.astro
+++ b/src/layouts/EpisodeLayout.astro
@@ -11,8 +11,7 @@ const displayDate = dayjs(pubDate).format("ll");
 ---
 
 <BaseLayout title={`${title} - ${astropodConfig.name}`} description={description} image={cover}>
-  <HeaderCard title={title} subtitle={astropodConfig.name} cover={cover} explicit={explicit} />
-
+  <HeaderCard title={astropodConfig.name} subtitle={astropodConfig.author} />
   <main class="md:flex md:justify-center">
     <article class="card prose min-w-full prose-img:mx-auto bg-base-100 shadow-md p-8 mt-12">
       <slot />
